[003] Generate staff api
