# docs/openapi.yaml
@@ -17,7 +17,7 @@ tags:
   description: Recording staff apperance timelines
 
 paths:
-  /stuff/add:
+  /staff/add:
     post:
       summary: Create new employee
       tags: 
@@ -42,13 +42,143 @@ paths:
             application/json:
               schema: 
                 $ref: "#/components/schemas/Error"
-  
-  
-
+  /staff/update:
+    put:
+      summary: Update employee
+      tags: 
+        - Staff
+      operationId: UpdateEmployee
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema: 
+              $ref: "#/components/schemas/UpdateEmployeeRequest"
+      responses:
+        200:
+          description: employee has been updated
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UpdateEmployeeResponse"
+        500:
+          description: any error (for mobile contract)
+          content:
+            application/json:
+              schema: 
+                $ref: "#/components/schemas/Error"
+  /staff/all:
+    get:
+      summary: Get all staff
+      tags: 
+        - Staff
+      operationId: ListEmployees
+      responses:
+        200:
+          description: succesful
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ListEmployeesResponse"
+        500:
+          description: any error (for mobile contract)
+          content:
+            application/json:
+              schema: 
+                $ref: "#/components/schemas/Error"
+  /staff/delete:
+    delete:
+      summary: Delete employee
+      tags: 
+        - Staff
+      operationId: DeleteEmployee
+      parameters:
+        - name: id
+          in: query
+          required: true
+          x-go-name: ID
+          schema:
+            type: integer
+            format: uint64
+          description: Employee ID
+      responses:
+        200:
+          description: succesful
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/DeleteEmployeeResponse"
+        500:
+          description: any error (for mobile contract)
+          content:
+            application/json:
+              schema: 
+                $ref: "#/components/schemas/Error"
+  /staff/get:
+    get:
+      summary: Get employee
+      tags: 
+        - Staff
+      operationId: GetEmployee
+      parameters:
+        - name: id
+          in: query
+          required: true
+          x-go-name: ID
+          schema:
+            type: integer
+            format: uint64
+          description: Employee ID
+      responses:
+        200:
+          description: succesful
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetEmployeeResponse"
+        500:
+          description: any error (for mobile contract)
+          content:
+            application/json:
+              schema: 
+                $ref: "#/components/schemas/Error"
+  /staff/recognize:
+    post:
+      summary: Recognize employee
+      tags: 
+        - Staff
+      operationId: RecognizeEmployee
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                file:
+                  type: string
+                  format: binary
+      responses:
+        200:
+          description: succesful
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/RecognizeEmployeeResponse"
+        500:
+          description: any error (for mobile contract)
+          content:
+            application/json:
+              schema: 
+                $ref: "#/components/schemas/Error"
 components:
   schemas:
     Any: {}
-    CreateEmployeeRequest:
+    Error:
+      type: object
+      properties:
+        error:
+          type: string
+    EmployeeBase:
       type: object
       required:
         - name
@@ -63,18 +193,44 @@ components:
           x-go-name: PhotoID
         meta:
           $ref: "#/components/schemas/Any"
+    Employee:
+      allOf:
+        - $ref: '#/components/schemas/EmployeeBase'
+        - type: object
+          required:
+            - id
+          properties:
+            id:
+              type: integer
+              format: int64
+              x-go-name: ID
+
+    CreateEmployeeRequest:
+      allOf:
+        - $ref: '#/components/schemas/EmployeeBase'
     CreateEmployeeResponse:
+      allOf:
+        - $ref: '#/components/schemas/Employee'
+    UpdateEmployeeRequest:
+      allOf:
+        - $ref: '#/components/schemas/Employee'
+    UpdateEmployeeResponse:
+      allOf:
+        - $ref: '#/components/schemas/Employee'
+    ListEmployeesResponse:
+      type: array
+      items:
+        $ref: '#/components/schemas/Employee'
+    DeleteEmployeeResponse:
       type: object
       required:
-        - id
+        - message
       properties:
-        id:
-          type: integer
-          format: int64
-          x-go-name: ID
-    Error:
-      type: object
-      properties:
-        error:
+        message:
           type: string
-
+    GetEmployeeResponse:
+      allOf:
+        - $ref: '#/components/schemas/Employee'
+    RecognizeEmployeeResponse:
+       allOf:
+        - $ref: '#/components/schemas/Employee'
