# internal/api/handler/delete_employee.go
@@ -1,0 +1,11 @@
+package handler
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/smart48ru/FaceIDApp/internal/api/openapi"
+)
+
+// DeleteEmployee implements openapi.ServerInterface
+func (*Handlers) DeleteEmployee(c *gin.Context, params openapi.DeleteEmployeeParams) {
+	panic("unimplemented")
+}
