# internal/api/handler/get_employee.go
@@ -1,0 +1,11 @@
+package handler
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/smart48ru/FaceIDApp/internal/api/openapi"
+)
+
+// GetEmployee implements openapi.ServerInterface
+func (h *Handlers) GetEmployee(c *gin.Context, params openapi.GetEmployeeParams) {
+	panic("unimplemented")
+}
