# internal/api/handler/update_employee.go
@@ -1,0 +1,8 @@
+package handler
+
+import "github.com/gin-gonic/gin"
+
+// UpdateEmployee implements openapi.ServerInterface
+func (h *Handlers) UpdateEmployee(c *gin.Context) {
+	panic("unimplemented")
+}
